jQuery와 Bootstrap JS 추가
jQuery와 Bootstrap JS 추가

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,12 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>푸터</title>
-    <!-- Bootstrap CSS -->
+    <!-- NanumSquare 폰트와 Bootstrap 추가 -->
+    <link href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-
+    <!-- 커스텀 CSS -->
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <!-- jQuery와 Bootstrap JS 추가 -->
+    <script src="/js/jquery-3.7.1.min.js"></script>
+    <script src="/js/bootstrap/bootstrap.min.js"></script>
 </head>
+
 
 <body>
     <!-- Footer -->
@@ -17,7 +23,7 @@
             주소: 부산 부산진구 중앙대로 749<br>
             대표전화: 051-295-4863 (평일 09시-18시)<br>
             대표: 임하진<br>
-            임원: 문균호, 한도훈, 조해욱, 차혜영
+            임원: 문균호, 한도훈, 조해욱, 차혜영, 박유진
         </div>
         <div class="links">
             <a href="#">이용안내</a>
