--- a/src/main/resources/static/css/notifications/noticeList.css
+++ b/src/main/resources/static/css/notifications/noticeList.css
@@ -1,3 +1,4 @@
+@import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
 
 body {
     font-family: 'NanumSquare', sans-serif;
@@ -7,7 +8,7 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 1100px;
     background-color: white;
     padding: 20px;
     border-radius: 8px;
@@ -28,29 +29,46 @@ h1 {
     border-collapse: collapse;
 }
 
-.table th, .table td {
+.table th,
+.table td {
     padding: 15px;
-    text-align: left;
     border-top: 1px solid #dee2e6;
 }
 
 .table th {
-    background-color: #f8f9fa;
+    background-color: white;
     font-weight: bold;
 }
 
 .table td {
-    background-color: #f8f9fa;
+    background-color: white;
     vertical-align: top;
 }
 
+.table .content-row {
+    display: none;
+}
+
+.toggle-row {
+    font-weight: bold;
+    font-size: 17px;
+    cursor: pointer;
+    background-color: white;
+}
+
+.active-toggle {
+    background-color: rgb(193, 192, 255);
+    color: white;
+}
+
 .table .content-row td {
-    background-color: #e0e7ff;
+    background-color: white;
+    font-weight: bold;
     color: black;
     font-size: 14px;
     line-height: 1.5;
     padding: 20px;
-    border-top: 0;
+    text-align: left;
 }
 
 .buttons {
@@ -71,4 +89,15 @@ h1 {
 
 .buttons button:hover {
     background-color: #333;
+}
+
+/* Custom styles for pagination */
+.pagination .page-link {
+    color: black;
+}
+
+.pagination .page-item.active .page-link {
+    background-color: black;
+    border-color: black;
+    color: white;
 }
