--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -10,15 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- 커스텀 CSS -->
     <link rel="stylesheet" th:href="@{/css/footer.css}">
-    <!-- jQuery와 Bootstrap JS 추가 -->
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap/bootstrap.min.js"></script>
 </head>
-
 
 <body>
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer" th:fragment="footerFragment">
         <div class="contact-info">
             주소: 부산 부산진구 중앙대로 749<br>
             대표전화: 051-295-4863 (평일 09시-18시)<br>
@@ -35,8 +31,11 @@
         </div>
     </footer>
 
-    <!-- Bootstrap JS -->
+    <!-- jQuery와 Bootstrap JS 추가 -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- 페이지 고유 스크립트 추가 -->
+    <!-- <script th:src="@{/js/footer.js}"></script> -->
 </body>
 
 </html>
