--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" th:fragment="footerFragment">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Footer -->
-    <footer class="footer" th:fragment="footerFragment">
+    <footer class="footer">
         <div class="contact-info">
             주소: 부산 부산진구 중앙대로 749<br>
             대표전화: 051-295-4863 (평일 09시-18시)<br>
