--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Posting_Pay_2.css">
+    <link rel="stylesheet" href="/css/contest/ContestPay2.css">
     <title>Document</title>
 </head>
 <body>
