--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -6,14 +6,16 @@
     <title>공지사항</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" th:href="/css/fragments/noticeList.css">
+    <link rel="stylesheet" th:href="@{/css/fragments/noticeList.css}">
     <script th:src="@{/js/fragments/noticeList.js}"></script>
-
 </head>
 
 <body>
-    <div th:insert="fragments/header :: header"></div>
-    <div class="container">
+    <!-- Header Fragment -->
+    <div th:replace="fragments/header :: header"></div>
+
+    <!-- Main Content -->
+    <div class="container" th:fragment="content">
         <h1>공지사항</h1>
         <table class="table">
             <thead>
@@ -23,12 +25,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="toggle-row" th:data-target="'#content-row-' + ${notice.id}"
+                <tr class="toggle-row" th:each="notice : ${notices}" 
+                    th:data-target="'#content-row-' + ${notice.noticeNum}"
                     th:onclick="|toggleContent(this)|">
                     <td th:text="${notice.title}">시스템 정기점검 안내</td>
                     <td th:text="${#dates.format(notice.date, 'yyyy.MM.dd')}">2024.08.16</td>
                 </tr>
-                <tr th:id="'content-row-' + ${notice.id}" class="content-row">
+                <tr th:id="'content-row-' + ${notice.noticeNum}" class="content-row">
                     <td colspan="2" th:text="${notice.content}">
                         시스템 점검은 2024년 8월 16일에 예정되어 있습니다. 서비스 이용에 불편을 끼쳐 드려 죄송합니다.
                     </td>
@@ -53,12 +56,14 @@
             </ul>
         </nav>
 
+        <!-- 등록 버튼 -->
         <div class="buttons">
-            <button>등록</button>
+            <button class="btn btn-success">등록</button>
         </div>
     </div>
 
-    <div th:insert="fragments/footer :: footer"></div>
+    <!-- Footer Fragment -->
+    <div th:replace="fragments/footer :: footer"></div>
 </body>
 
 </html>
