--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -9,32 +9,32 @@
 <body>
 
 <div class="container">
+
+    <form action="/contest/payment/submit" method="post" enctype="multipart/form-data">
     <div class="title">결제 정보를 확인해주세요.</div>
 
-    <div class="info">
-        <h3>의뢰자 정보</h3>
-        <p>이메일 <span id="displayEmail"></span></p>
-        <p>이름 <span id="displayName"></span></p>
-        <p>연락처 <span id="displayContact"></span></p>
-    </div>
+        <div class="info">
+            <h3>의뢰자 정보</h3>
+            <p>이메일 <span id="displayEmail"></span></p>
+        </div>
 
-    <div class="payment-info">
-        <h3>상금 설정</h3>
-        <p>콘테스트 상금 <span id="displayContest"></span> 원</p>
-        <p>서비스 이용료 <span id="displayService"></span> 원</p>
+        <div class="payment-info">
+            <h3>상금 설정</h3>
+            <p>콘테스트 상금 <span id="displayContest" th:text="${contestUploadDTO.conFirstPrice}"></span> 원</p>
+            <p>서비스 이용료 <span id="displayService"></span> 원</p>
 
-    </div>
+        </div>
 
-    <div class="pay">
-        <h3>총 금액</h3>
-        <P><span id="displayTotal"></span> 원</P>
-    </div>
+        <div class="pay">
+            <h3>총 금액</h3>
+            <p><span id="displayTotal">총 금액 계산 로직 추가</span> 원</p>
+        </div>
 
-    <div class="btn-container">
-        <a href="javascript:history.back()" class="btn btn-back">이전</a>
-        <a href="#" class="btn">결제하기</a>
-    </div>
-
+        <div class="btn-container">
+            <a href="javascript:history.back()" class="btn btn-back">이전</a>
+            <a href="#" class="btn">결제하기</a>
+        </div>
+    </form>
 </div>
 
 </body>
