thymeleaf를 사용하여 main 페이지에 header, footer 적용
thymeleaf를 사용하여 main 페이지에 header, footer 적용

--- a/src/main/resources/static/css/list/main.css
+++ b/src/main/resources/static/css/list/main.css
@@ -23,14 +23,16 @@
 }
 
 /* header 영역 */
+/*
 header
 {
     height: 145px;
 }
-
+*/
 /* main 영역 */
 main
 {
+    margin-top: 90px;
     display: flex;
     justify-content: center;
 }
@@ -255,8 +257,10 @@ a
 }
 
 /* footer 영역 */
+/*
 footer
 {
     height: 322px;
     border-top: 1px solid var(--line-gray);
 }
+*/
