--- a/src/main/resources/templates/list/main.html
+++ b/src/main/resources/templates/list/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +8,16 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/line-awesome/css/line-awesome.min.css"> -->
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="main.css">
+<!--    <script src="main.js"></script>-->
+<!--    <link rel="stylesheet" href="main.css">-->
+    <link rel="stylesheet" th:href="@{/css/list/main.css}"/>
+    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
+    <script th:src="@{/js/list/main.js}"></script>
 </head>
 <body>
-    <header>
+<!--    <header>-->
+<header th:insert="~{fragments/header :: headerFragment}">
 
     </header>
     <main>
@@ -349,7 +354,8 @@
             </div><!--sectionB 끝-->
         </div>
     </main>
-    <footer>
+<!--    <footer>-->
+<footer th:insert="~{fragments/footer :: footerFragment}">
 
     </footer>
 </body>
