--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" 
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
@@ -6,11 +6,11 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 </head>
 
 <body>
-    <!-- content -->
+    -- content 
     <th:block layout:fragment="content"></th:block>
 
-    <!-- footer -->
+    -- footer 
     <footer th:replace="fragments/footer :: footer"></footer>
 </body>
 
-</html>
+</html> -->
