--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -6,14 +6,19 @@
     <title>공지사항</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/css/notifications/noticeList.css}">
-
+    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <script th:src="@{/js/notifications/noticeList.js}"></script>
 </head>
 
 <body>
     <!-- Header Fragment -->
-    <div th:replace="fragments/header :: header"></div>
+    <header th:insert="~{fragments/header :: headerFragment}">
+
+    </header>
 
     <!-- Main Content -->
     <div class="container" th:fragment="content">
@@ -73,7 +78,9 @@
     </div>
 
     <!-- Footer Fragment -->
-    <div th:replace="fragments/footer :: footer"></div>
+    <footer th:insert="~{fragments/footer :: footerFragment}">
+
+    </footer>
 </body>
 
 </html>
