--- a/src/main/resources/templates/notifications/noticeWrite.html
+++ b/src/main/resources/templates/notifications/noticeWrite.html
@@ -42,7 +42,7 @@
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <textarea id="content" name="content" class="form-control" placeholder="내용을 입력하세요" required></textarea>
+                <textarea id="content" name="content" class="form-control" placeholder="내용을 입력하세요"></textarea>
             </div>
             <!-- hidden input to handle temporary save state -->
             <input type="hidden" id="noticeTempSave" name="noticeTempSave" value="false">
