- 옵션 선택 값 수정

--- a/src/main/resources/templates/contest/ContestUpload.html
+++ b/src/main/resources/templates/contest/ContestUpload.html
@@ -20,15 +20,15 @@
         <label for="conType">업종</label>
         <select id="conType" name="conType" required>
             <option value="">업종 선택</option>
-            <option value="1">식당/카페</option>
-            <option value="2">식품/건강</option>
-            <option value="3">IT/미디어</option>
-            <option value="4">뷰티/패션</option>
-            <option value="5">병원</option>
-            <option value="6">반려동물</option>
-            <option value="7">교육/육아</option>
-            <option value="8">공공기관</option>
-            <option value="9">일반기타</option>
+            <option value="식당/카페">식당/카페</option>
+            <option value="식품/건강">식품/건강</option>
+            <option value="IT/미디어">IT/미디어</option>
+            <option value="뷰티/패션">뷰티/패션</option>
+            <option value="병원">병원</option>
+            <option value="반려동물">반려동물</option>
+            <option value="교육/육아">교육/육아</option>
+            <option value="공공기관">공공기관</option>
+            <option value="일반기타">일반기타</option>
         </select>
 
         <label for="conLogoName">로고명</label>
@@ -37,8 +37,8 @@
         <label for="conBriefing">브리핑</label>
         <textarea id="conBriefing" name="conBriefing" rows="5" placeholder="브리핑을 입력해 주세요" required></textarea>
 
-<!--        <label for="conFile">첨부파일</label>-->
-<!--        <input type="file" id="conFile" name="conFile" accept=".zip,.jpg,.jpeg,.png" required>-->
+        <!--        <label for="conFile">첨부파일</label>-->
+        <!--        <input type="file" id="conFile" name="conFile" accept=".zip,.jpg,.jpeg,.png" required>-->
 
         <button type="submit" class="btn">다음</button>
     </form>
